--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "icons": "^1.0.0",
     "navigation": "^5.0.1",
     "react": "16.3.1",
+    "react-font-awesome": "^1.0.3",
     "react-native": "^0.55.4",
     "react-native-autogrow-textinput": "^5.1.1",
     "react-native-elements": "^0.19.1",
